chore: 调整项目结构

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>vanilla-components</title>
   </head>
   <body>
-    <a href="./button.html">go to button</a>
+    <a href="./app/button.html">go to button</a>
   </body>
 </html>
