--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./docs/styles/global.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>vanilla-components</title>
   </head>
   <body>
-    <a href="./app/button.html">go to button</a>
+    <va-theme-provider>
+      <nav-header></nav-header>
+      <section class="max-w-7xl px-4 md:px-0 mx-auto flex flex-col items-center">
+        <h1 class="text-center text-5xl mt-20 text-shadow-lg">Vanilla-Components</h1>
+        <p class="text-center mt-8 max-w-3xl">
+          <span class="text-(--primary-color) font-semibold">Vanilla-Components</span> 是一个基于 Web Components 的轻量级 UI 组件库，使用原生 JavaScript
+          构建。因此，您无需任何构建工具，即可直接下载使用。
+        </p>
+        <a href="./docs/installation.html" class="mt-8">
+          <va-button class="w-32" size="lg">开始使用</va-button>
+        </a>
+        <div class="grid w-full gap-x-3 gap-y-5 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-12">
+          <show-card href="./docs/button.html" name="Button">
+            <va-button class="[&::part(button)]:pointer-events-none">Button</va-button>
+          </show-card>
+          <show-card>Coming soon</show-card>
+        </div>
+      </section>
+    </va-theme-provider>
   </body>
+  <script type="module">
+    import './ui/theme-provider/index.js';
+    import './docs/components/nav-header.js';
+    import './ui/button/index.js';
+    import './docs/components/show-card.js';
+  </script>
 </html>
