--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./docs/styles/global.css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>vanilla-components</title>
   </head>
   <body>
     <va-theme-provider>
       <nav-header></nav-header>
-      <section class="max-w-7xl px-4 md:px-0 mx-auto flex flex-col items-center">
+      <section class="max-w-7xl px-4 xl:px-0 mx-auto flex flex-col items-center">
         <h1 class="text-center text-5xl mt-20 text-shadow-lg">Vanilla-Components</h1>
         <p class="text-center mt-8 max-w-3xl">
           <span class="text-(--primary-color) font-semibold">Vanilla-Components</span> 是一个基于 Web Components 的轻量级 UI 组件库，使用原生 JavaScript
@@ -20,11 +19,20 @@
         <a href="./docs/installation.html" class="mt-8">
           <va-button class="w-32" size="lg">开始使用</va-button>
         </a>
-        <div class="grid w-full gap-x-3 gap-y-5 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-12">
+        <div class="grid w-full md:max-w-6xl mx-auto gap-x-3 gap-y-5 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-12">
           <show-card href="./docs/button.html" name="Button">
             <va-button class="[&::part(button)]:pointer-events-none">Button</va-button>
           </show-card>
-          <show-card>Coming soon</show-card>
+          <show-card href="./docs/modal.html" name="Modal">
+            <div class="w-[60%] h-[60%] rounded-md border border-(--border-color) bg-white p-4 relative">
+              <div class="w-8 h-2 rounded-xs bg-gray-300"></div>
+              <div class="w-[80%] mt-1.5 h-2 rounded-xs bg-gray-300"></div>
+              <div class="absolute bottom-3 right-3 flex gap-2">
+                <div class="h-5 bg-gray-200 rounded-sm w-10"></div>
+                <div class="h-5 bg-(--primary-color) rounded-sm w-10"></div>
+              </div>
+            </div>
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
@@ -33,6 +41,8 @@
     import './ui/theme-provider/index.js';
     import './docs/components/nav-header.js';
     import './ui/button/index.js';
+    import './ui/modal/index.js';
     import './docs/components/show-card.js';
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </html>
