feat: 增加va-switch组件

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
           <show-card href="./docs/tag.html" name="Tag">
             <va-tag>Tag</va-tag>
           </show-card>
+          <show-card href="./docs/switch.html" name="Tag">
+            <va-switch checked class="[&::part(switch)]:pointer-events-none"></va-switch>
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
@@ -47,6 +50,7 @@
     import './ui/button/index.js';
     import './ui/modal/index.js';
     import './ui/tag/index.js';
+    import './ui/switch/index.js';
     import './docs/components/show-card.js';
   </script>
 </html>
