--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
           <show-card href="./docs/tag.html" name="Tag">
             <va-tag>Tag</va-tag>
           </show-card>
-          <show-card href="./docs/switch.html" name="Tag">
+          <show-card href="./docs/switch.html" name="Switch">
             <va-switch checked class="[&::part(switch)]:pointer-events-none"></va-switch>
           </show-card>
         </div>
