feat: upadte home grid

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
           <show-card href="./docs/switch.html" name="Switch">
             <va-switch checked class="[&::part(switch)]:pointer-events-none"></va-switch>
           </show-card>
+          <show-card href="./docs/progress.html" name="Progress">
+            <va-progress class="w-[52%]" value="30"></va-progress>
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
@@ -51,6 +54,7 @@
     import './ui/modal/index.js';
     import './ui/tag/index.js';
     import './ui/switch/index.js';
+    import './ui/progress/index.js';
     import './docs/components/show-card.js';
   </script>
 </html>
