feat: 增加va-loading组件

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
           <show-card href="./docs/progress.html" name="Progress">
             <va-progress class="w-[52%]" value="30"></va-progress>
           </show-card>
+          <show-card href="./docs/loading.html" name="Loading">
+            <div class="size-8 border-4 border-(--primary-color) border-t-(--primary-color)/25 rounded-full" value="30"></div>
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
