feat: add va-input component

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
             <va-progress class="w-[52%]" value="30"></va-progress>
           </show-card>
           <show-card href="./docs/loading.html" name="Loading">
-            <div class="size-8 border-4 border-(--primary-color) border-t-(--primary-color)/25 rounded-full" value="30"></div>
+            <div class="size-8 border-4 border-(--primary-color) border-t-(--primary-color)/25 rounded-full"></div>
+          </show-card>
+          <show-card href="./docs/icon.html" name="Icon">
+            <va-icon prefix="lucide" name="award" size="32" color="#0D65F2" />
           </show-card>
         </div>
       </section>
@@ -58,6 +61,7 @@
     import './ui/tag/index.js';
     import './ui/switch/index.js';
     import './ui/progress/index.js';
+    import './ui/icon/index.js';
     import './docs/components/show-card.js';
   </script>
 </html>
