feat: home add input nav

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,9 @@
           <show-card href="./docs/icon.html" name="Icon">
             <va-icon prefix="lucide" name="award" size="32" color="#0D65F2" />
           </show-card>
+          <show-card href="./docs/input.html" name="Input">
+            <va-input name="input" value="input..." class="pointer-events-none" />
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
@@ -62,6 +65,7 @@
     import './ui/switch/index.js';
     import './ui/progress/index.js';
     import './ui/icon/index.js';
+    import './ui/input/index.js';
     import './docs/components/show-card.js';
   </script>
 </html>
