fix: 修正action页面路径

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <va-action class="w-32" size="lg">开始使用</va-action>
         </a>
         <div class="grid w-full lg:max-w-4xl xl:max-w-6xl mx-auto gap-x-3 gap-y-5 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-12">
-          <show-card href="./docs/Action.html" name="Action">
+          <show-card href="./docs/action.html" name="Action">
             <va-action class="[&::part(action)]:pointer-events-none">Action</va-action>
           </show-card>
           <show-card href="./docs/modal.html" name="Modal">
