--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,9 @@
           <show-card href="./docs/icon.html" name="Icon">
             <va-icon prefix="lucide" name="award" size="32" color="#0D65F2" />
           </show-card>
+          <show-card href="./docs/tooltip.html" name="Icon">
+            <div class="px-2 text-xs py-[6px] text-white rounded-md bg-(--black-color)">Tooltip</div>
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
