feat: 增加首页drawer入口

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,16 @@
           <show-card href="./docs/tooltip.html" name="Tooltip">
             <div class="px-2 text-xs py-[6px] text-white rounded-md bg-(--primary-color)">Tooltip</div>
           </show-card>
+          <show-card href="./docs/drawer.html" name="Drawer">
+            <div class="relative bg-black/10 w-[80%] h-[80%]">
+              <div class="absolute top-0 right-0 w-[40%] h-full bg-white">
+                <div class="absolute bottom-2 right-2 flex gap-1">
+                  <div class="h-3 bg-gray-200 rounded-sm w-7"></div>
+                  <div class="h-3 bg-(--primary-color) rounded-sm w-7"></div>
+                </div>
+              </div>
+            </div>
+          </show-card>
         </div>
       </section>
     </va-theme-provider>
